# pancake-bench

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cross-aarch64.yml  cross-riscv.yml  cross-x86.yml  test.yml
automotive/: CMakeLists.txt
consumer/: CMakeLists.txt
network/: CMakeLists.txt
network/dijkstra/: CMakeLists.txt  dijkstra.c
office/: CMakeLists.txt
security/: CMakeLists.txt
src/mibench-dijkstra/: CMakeLists.txt  dijkstra.🥞  pancake_ffi.c
src/quicksort/: CMakeLists.txt  pancake_ffi.c  quicksort.c  quicksort.🥞
telecomm/: CMakeLists.txt
